# prince-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  win_run.bat
pge-core/: CMakeLists.txt
pge-core/include/PGE/: application.h  pge.h  pgeApplication.h  pgeCore.h
pge-core/include/PGE/components/: components.h  pgeAnimation.h  pgePosition.h  pgeRigidbody.h  pgeSprite.h  pgeTransform.h
pge-core/include/PGE/core/: pgeCore.h  pgeEntrypoint.h
pge-core/include/PGE/ecs/: pgeEcs.h
pge-core/include/PGE/events/: pgeEvent.h  pgeInput.h
pge-core/include/PGE/gfx/: pgeWindow.h
pge-core/include/PGE/graphics/: pgeColor.h  pgeRenderer.h  pgeRendererWrapper.h  pgeTexture.h  pgeWindow.h
pge-core/include/PGE/systems/: pgeAnimationSys.h  pgePhysicsSys.h  pgeRenderSys.h  pgeSystems.h
pge-core/include/PGE/utils/: pgeLogger.h  pgeTime.h  pgeTypes.h
pge-core/src/: application.cpp  pgeApplication.cpp  pgeCore.cpp
pge-core/src/components/: pgePosition.cpp  pgeSprite.cpp  pgeTransform.cpp
pge-core/src/core/: pgeCore.cpp
pge-core/src/ecs/: pgeEcs.cpp
pge-core/src/events/: pgeEvent.cpp  pgeInput.cpp
pge-core/src/gfx/: pgeWindow.cpp
pge-core/src/graphics/: pgeColor.cpp  pgeRenderer.cpp  pgeTexture.cpp  pgeWindow.cpp
pge-core/src/systems/: pgeAnimationSys.cpp  pgePhysicsSys.cpp  pgeRenderSys.cpp
pge-core/src/utils/: pgeLogger.cpp
pge-sandbox/: CMakeLists.txt
pge-sandbox/src/: main.cpp
